--- a/sample_variables.conf
+++ b/sample_variables.conf
@@ -1,8 +1,11 @@
 LOCATION="japaneast"
 
+# リソースグループ名
 RESOURCE_GROUP="dev"
 
+# cointainer apps 環境名
 CONTAINERAPPS_ENVIRONMENT="devenv"
 
+# cointainer registry 名
 # 空推奨
 CONTAINER_REGISTRY=""
